# i3-worker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml
docker/: Dockerfile  entrypoint.sh  run.bash
i3worker/: __init__.py  celery_app.py  client.py  config.py  constants.py  models.py  schema.py  tasks.py
i3worker/cli/: app.py  i3w.py  index.py  schema.py
i3worker/db/: __init__.py  api.py  doc_ver.py  engine.py  models.py  node.py  orm.py
tests/: conftest.py  test_index_add.py  test_tasks.py
