[tool.poetry]
name = "i3worker"
version = "0.1.0"
description = "Sync DB with search index"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
celery = {version = "^5.4", extras = ["redis"]}
salinic = "^0.5.0"
typer = "^0.12.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"
pdf2image = "^1.17.0"
sqlalchemy = "^2.0.30"
psycopg2 = { version = "^2.9.2", optional = true}
psycopg2-binary = { version = "^2.9.2", optional = true}
mysqlclient = {version = "^2.2.0", optional = true}
rich = "^13.7.1"
glom = "^23.5.0"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2", "psycopg2-binary"]
databases = ["mysqlclient", "psycopg2"]

[tool.poetry.scripts]
index = 'i3worker.cli.index:app'
schema = 'i3worker.cli.schema:app'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.taskipy.tasks]
worker = "celery -A i3worker worker -E -c 4 -Q i3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
