[tool.poetry]
name = "i3worker"
version = "0.3.1b1"
description = "Sync DB with search index"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
celery = {version = "^5.4", extras = ["redis"]}
salinic = "0.6.1"
typer = "^0.16"
pydantic = "^2.11"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0"
pdf2image = "^1.17.0"
sqlalchemy = "^2.0"
psycopg2 = { version = "^2.9", optional = true}
mysqlclient = {version = "^2.2", optional = true}
rich = "^13.9"
glom = "^24.11"

[tool.poetry.extras]
mysql = ["mysqlclient"]
pg = ["psycopg2"]
databases = ["mysqlclient", "psycopg2"]

[tool.poetry.scripts]
i3 = 'i3worker.cli.app:app'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.taskipy.tasks]
worker = "celery -A i3worker worker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
